fixed issue that caused overflow on index.html, attempted fix on function

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -67,8 +67,8 @@ $color30darken: darken($color1, 30%);
   background: $color30darken;
 }
 
-.vertical-center-row {
-  text-align: center;
+.pl-10 {
+  padding-left: 100px;
 }
 
 .page-content {
